--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,18 +3,18 @@ name: Scrape
 on:
   workflow_dispatch:
     inputs:
-      accountsToScrape:
-        default: ""
-        required: false
-        description: "Accounts to scrape (comma separated)"
+      # accountsToScrape:
+      #   default: ""
+      #   required: false
+      #   description: "Accounts to scrape (comma separated)"
       daysBack:
-        default: "10"
+        default: "30"
         required: false
         description: "Days back to scrape"
-      worksheetName:
-        default: "auto_moneyman"
-        required: false
-        description: "The name of the worksheet to write to"
+      # worksheetName:
+      #   default: "auto_moneyman"
+      #   required: false
+      #   description: "The name of the worksheet to write to"
   schedule:
     - cron: "0 22 * * *"
 env:
