--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -34,6 +34,7 @@ jobs:
           -e DEBUG
           -e DAYS_BACK
           -e TZ
+          -e FUTURE_MONTHS
           -e WORKSHEET_NAME
           -e ACCOUNTS_JSON
           -e TELEGRAM_API_KEY
@@ -61,6 +62,7 @@ jobs:
           DEBUG: ${{ vars.DEBUG }}
           TZ: "Asia/Jerusalem"
           DAYS_BACK: ${{ github.event.inputs.daysBack }}
+          FUTURE_MONTHS: ${{ vars.FUTURE_MONTHS }}
           WORKSHEET_NAME: ${{ github.event.inputs.worksheetName }}
           ACCOUNTS_TO_SCRAPE: ${{ github.event.inputs.accountsToScrape }}
           ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}
