--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       "skipFiles": ["<node_internals>/**"],
       "outputCapture": "std",
       "env": {
-        "DEBUG": "*"
+        "DEBUG": "moneyman:*"
       }
     }
   ]
