--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -21,7 +21,8 @@ env:
   REGISTRY: ghcr.io
 jobs:
   scrape:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    # ubuntu-latest
     steps:
       - id: normalize-repository-name
         run: echo "repository=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
