--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -21,7 +21,8 @@ env:
   REGISTRY: ghcr.io
 jobs:
   scrape:
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
+    # ubuntu-24.04
     # self-hosted
     # ubuntu-latest
     steps:
