--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -11,10 +11,14 @@ on:
         default: "30"
         required: false
         description: "Days back to scrape"
-      # worksheetName:
-      #   default: "auto_moneyman"
-      #   required: false
-      #   description: "The name of the worksheet to write to"
+      worksheetName:
+        default: "auto_moneyman"
+        required: false
+        description: "The name of the worksheet to write to"
+      parallelScrapes:
+        default: "1"
+        required: false
+        description: "Number of parallel scrapes to run"
   schedule:
     - cron: "0 22 * * *"
 env:
@@ -61,6 +65,7 @@ jobs:
           -e BUXFER_ACCOUNTS
           -e TRANSACTION_HASH_TYPE
           -e WEB_POST_URL
+          -e MAX_PARALLEL_SCRAPERS
           ${{ env.REGISTRY }}/${{ steps.normalize-repository-name.outputs.repository }}:latest
         env:
           DEBUG: ${{ vars.DEBUG }}
@@ -90,3 +95,4 @@ jobs:
           BUXFER_ACCOUNTS: ${{ secrets.BUXFER_ACCOUNTS }}
           TRANSACTION_HASH_TYPE: ${{ secrets.TRANSACTION_HASH_TYPE }}
           WEB_POST_URL: ${{ secrets.WEB_POST_URL }}
+          MAX_PARALLEL_SCRAPERS: ${{ github.event.inputs.parallelScrapes }}
