--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/daniel-hauser/moneyman#readme",
   "dependencies": {
+    "async": "^3.2.6",
     "azure-kusto-data": "^6.0.2",
     "azure-kusto-ingest": "^6.0.2",
     "buxfer-ts-client": "^1.1.0",
@@ -38,11 +39,12 @@
     "google-auth-library": "^9.14.1",
     "google-spreadsheet": "^4.1.4",
     "hash-it": "^6.0.0",
-    "israeli-bank-scrapers": "^5.1.4",
+    "israeli-bank-scrapers": "^5.2.0",
     "telegraf": "^4.16.3",
     "ynab": "^2.5.0"
   },
   "devDependencies": {
+    "@types/async": "^3.2.24",
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.13",
     "husky": "^9.1.6",
