feat: actions improvments (#358)
* [Scrape] When running from `schedule`, run with 3 parallel scrapers

* Run PR ci only when code changes + split to different jobs

* Run image publish only when code changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,15 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ["main"]
+    paths:
+      - "src/**"
+      - "patches/**"
+      - "package.json"
+      - "package-lock.json"
+      - "tsconfig.json"
+      - ".eslintrc.js"
+      - ".prettierrc.js"
+      - ".github/workflows/build.yml"
   workflow_dispatch:
 
 env:
