--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,12 +3,12 @@ name: Scrape
 on:
   workflow_dispatch:
     inputs:
-      # accountsToScrape:
-      #   default: ""
-      #   required: false
-      #   description: "Accounts to scrape (comma separated)"
+      accountsToScrape:
+        default: ""
+        required: false
+        description: "Accounts to scrape (comma separated)"
       daysBack:
-        default: "30"
+        default: "10"
         required: false
         description: "Days back to scrape"
       worksheetName:
@@ -28,9 +28,6 @@ env:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    # ubuntu-24.04
-    # self-hosted
-    # ubuntu-latest
     steps:
       - id: normalize-repository-name
         run: echo "repository=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
@@ -70,7 +67,7 @@ jobs:
           -e MAX_PARALLEL_SCRAPERS
           ${{ env.REGISTRY }}/${{ steps.normalize-repository-name.outputs.repository }}:latest
         env:
-          DEBUG: ${{ vars.DEBUG }}
+          DEBUG: ""
           TZ: "Asia/Jerusalem"
           DAYS_BACK: ${{ github.event.inputs.daysBack }}
           FUTURE_MONTHS: ${{ vars.FUTURE_MONTHS }}
