--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/daniel-hauser/moneyman#readme",
   "dependencies": {
+    "@gczobel/israeli-bank-s`crapers": "^1.0.4",
     "@mswjs/interceptors": "^0.38.0",
     "async": "^3.2.6",
     "azure-kusto-data": "^6.0.3",
@@ -40,7 +41,6 @@
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "hash-it": "^6.0.0",
-    "israeli-bank-scrapers": "^5.4.6",
     "telegraf": "^4.16.3",
     "ynab": "^2.9.0"
   },
@@ -56,7 +56,7 @@
     "prettier": "^3.5.3",
     "pretty-quick": "^4.1.1",
     "ts-jest": "^29.3.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "husky": {
     "hooks": {
